fixed overflow

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@ body {
   color: #eee;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 .content {
   min-height: 70vh;
